# g11-macro

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
g11-macro-daemon/: CONFIGURATION.md  Cargo.toml  INSTALLATION.md  README.md
g11-macro-daemon/src/: bindings.rs  config.rs  config_stub.ron  config_stub_record.ron  main.rs
g11-macro-daemon/src/record/: mapping.rs  mod.rs  standard_keys.rs
g11-macro-daemon/src/steps/: mod.rs  program.rs
g11-macro-keys/: Cargo.toml  README.md
g11-macro-keys/examples/: led_binary_stopwatch.rs
g11-macro-keys/src/: led.rs  lib.rs  multikey.rs
