[package]
name = "g11-macro-daemon"
description = "Linux daemon supporting the Logitech G11 Keyboard's macro keys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true


[dependencies]
g11-macro-keys = { version = "0.2.*", path = "../g11-macro-keys" }

hidapi.workspace = true
enigo = { workspace = true, default-features = false, features = ["x11rb", "serde"] }
xdg.workspace = true

log = { workspace = true, features = ["std"] }
env_logger = { workspace = true, features = ["auto-color"] }

serde = { workspace = true, features = ["derive"] }
ron.workspace = true

smallvec.workspace = true
derive_more = { workspace = true, features = ["error"] }


[dev-dependencies]
test-log.workspace = true
